deployment/noti_weather.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: noti-weather-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: noti-weather
  template:
    metadata:
      labels:
        app: noti-weather
    spec:
      containers:
      - name: noti-weather
        image: weather_noti
        imagePullPolicy: Never
        ports:
        - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: noti-weather-service
spec:
  selector:
    app: noti-weather
  ports:
  - protocol: TCP
    port: 8888
    targetPort: 8082
  type: ClusterIP
