deployment/predict_weather.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: predict-weather-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: predict-weather
  template:
    metadata:
      labels:
        app: predict-weather
    spec:
      containers:
      - name: predict-weather
        image: weather_predict
        imagePullPolicy: Never
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: predict-weather-service
spec:
  selector:
    app: predict-weather
  ports:
  - protocol: TCP
    port: 5050
    targetPort: 8000
  type: ClusterIP
